--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Project5-forumz/konekcija.php
 /Project6-plantae/plantae/images
 /Project6-plantae/plantae/application/config/database.php
+/Project7-comics/Comics/assets/font-awesome-4.5.0
+/Project7-comics/Comics/assets/images
